tests/Rules/Structure/Fixtures/valid/expr_in_attr_anchor.html.twig
<a href="#" title="{{ page.title }}">Link</a>
<a href="#" title=""> </a>
