tests/Rules/Structure/Fixtures/invalid/iframe_tabindex_focusable.html.twig
{# 1 errors #}
<iframe tabindex="-1"><button>Click</button></iframe>
